--- a/views/new.pug
+++ b/views/new.pug
@@ -2,6 +2,7 @@ extends layout
 
 block content
   form(method="post" action="/events").my-3
+    input(type="hidden" name="_csrf" value!=csrfToken)
     div.form-group
       label(for="eventname") イベント名
       input(type="text" name="eventname")#eventname.form-control
